--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "NODE_PATH": "./src",
         "NODE_ENV": "development",
         "PORT": 3000,
+        "APIHOST": "localhost",
         "APIPORT": 7293
       }
     },
