--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "multireducer": "^2.0.0",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
+    "rc-rate": "^1.1.2",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
     "react-bootstrap-datetimepicker": "0.0.22",
