--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "NODE_PATH": "./src",
         "NODE_ENV": "development",
         "PORT": 3000,
-        "APIHOST": "localhost",
+        "APIHOST": "172.18.96.189",
         "APIPORT": 7293
       }
     },
